--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "type": "project",
     "require": {
         "php": "^7.2",
-        "laravel/lumen-framework": "^6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "laravel/lumen-framework": "^6.0",
+        "league/flysystem": "^1.0",
+        "ext-zip": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
