--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "guzzlehttp/guzzle": "~6.0",
         "laravel/lumen-framework": "^6.0",
         "league/flysystem": "^1.0",
-        "ext-zip": "*"
+        "ext-zip": "*",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
