--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,19 @@
     "type": "project",
     "require": {
         "php": "^7.2",
+        "ext-json": "*",
+        "ext-pdo": "*",
+        "ext-zip": "*",
         "guzzlehttp/guzzle": "~6.0",
         "laravel/lumen-framework": "^6.0",
-        "league/flysystem": "^1.0",
-        "ext-zip": "*",
-        "ext-pdo": "*"
+        "league/flysystem": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
         "laravel/tinker": "^2.2",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^8.0",
+        "flipbox/lumen-generator": "^6.0"
     },
     "autoload": {
         "classmap": [
